--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
                                 <h2 data-animation="fadeInUp" data-delay="300ms">HackVerse <br>24-Hour Nation Wide Hackathon</h2>
                                 <h6 data-animation="fadeInUp" data-delay="500ms">National Institute of Technology Karnataka, Surathkal</h6>
                                 <h3 data-animation="fadeInUp" data-delay="500ms" style="color: gold" >Jan 25th - 26th, 2020</h6>
-                                <div style=" margin-left: auto;margin-right: auto;width: 250px;">
+                                <!-- <div style=" margin-left: auto;margin-right: auto;width: 250px;">
                                     <button id="devfolio-apply-now"><svg class="logo" xmlns="http://www.w3.org/2000/svg" fill="#fff"
                                         viewBox="0 0 115.46 123.46" style="height:24px;width:24px;margin-right:8px">
                                         <path d="M115.46 68a55.43 55.43 0 0 1-50.85 55.11S28.12 124 16 123a12.6 12.6 0 0 1-10.09-7.5 15.85 15.85 0 0 0 5.36 1.5c4 .34 10.72.51 20.13.51 13.82 0 28.84-.38 29-.38h.26a60.14 60.14 0 0 0 54.72-52.47c.05 1.05.08 2.18.08 3.34z" />
                                         <path d="M110.93 55.87A55.43 55.43 0 0 1 60.08 111s-36.48.92-48.58-.12C5 110.29.15 104.22 0 97.52l.2-83.84C.38 7 5.26.94 11.76.41c12.11-1 48.59.12 48.59.12a55.41 55.41 0 0 1 50.58 55.34z" />
                                         </svg>Apply with Devfolio
                                     </button>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
