--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         <a data-toggle="collapse" href="#faq7" class="collapsed">What are the perks of participating in this hackathon? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq7" class="collapse" data-parent="#faq-list">
                             <p>
-                                The hackathon will provide hands on experience with the experts from different field working on the. Along with that the participant will be provided with cool swag, stickers and refreshments to keep them up. Also our sponsors will be providing problem statements and if team works on the problem statements, they may get company prizes and recruitment benefits.
+                                The hackathon will provide hands on experience with projects on different fields. Participants will be provided with cool swag, stickers and refreshments to keep them up. 
                             </p>
                         </div>
                     </li>
