--- a/index.html
+++ b/index.html
@@ -552,11 +552,11 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/"><img src="img/sponsors-img/devfolio.png" alt=""></a>
                         </div>
-                        <!-- <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a href="#"><img src="img/sponsors-img/devfolio2.png" alt=""></a>
-                        </div> -->
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://matic.network"><img src="img/sponsors-img/matic.png" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img  src="img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt=""></a>
                         </div>
                     </div>
                     <div id="desktop">
