--- a/index.html
+++ b/index.html
@@ -561,6 +561,9 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickermule.com/"><img src="img/sponsors-img/sticker-mule-logo-light.png" alt=""></a>
                         </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.bugsee.com/"><img src="img/sponsors-img/bugsee.png" alt=""></a>
+                        </div>
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring Hackverse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
