--- a/index.html
+++ b/index.html
@@ -359,6 +359,15 @@
                     </li>
 
                     <li>
+                        <a data-toggle="collapse" class="collapsed" href="#faq1">Who is eligible to apply?<i class="fa fa-minus-circle"></i></a>
+                        <div id="faq1" class="collapse" data-parent="#faq-list">
+                            <p>
+                                Students enrolled in any college in India can apply for the hackathon.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li>
                         <a data-toggle="collapse" href="#faq2" class="collapsed">Is there any registration
                             fee? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq2" class="collapse" data-parent="#faq-list">
@@ -393,7 +402,11 @@
                             </p>
                         </div>
                     </li>
+                </ul>
+            </div>
 
+            <div class="col-lg-6">
+                <ul id="faq2-list">
                     <li>
                         <a data-toggle="collapse" href="#faq6" class="collapsed">What should I do if I do not have any team yet? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq6" class="collapse" data-parent="#faq-list">
@@ -402,11 +415,6 @@
                             </p>
                         </div>
                     </li>
-                </ul>
-            </div>
-
-            <div class="col-lg-6">
-                <ul id="faq2-list">
                     <li>
                         <a data-toggle="collapse" href="#faq7" class="collapsed">What are the perks of participating in this hackathon? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq7" class="collapse" data-parent="#faq-list">
@@ -563,6 +571,9 @@
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.bugsee.com/"><img src="img/sponsors-img/bugsee.png" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.wolfram.com/language/"><img src="img/sponsors-img/wolfram.png" alt=""></a>
                         </div>
                     </div>
                     <div id="desktop">
