--- a/index.html
+++ b/index.html
@@ -402,6 +402,14 @@
                             </p>
                         </div>
                     </li>
+                    <li>
+                        <a data-toggle="collapse" href="#faq13" class="collapsed">Will travel reimbursements be provided?<i class="fa fa-minus-circle"></i></a>
+                        <div id="faq13" class="collapse" data-parent="#faq2-list">
+                            <p>
+                                Reimbursements cannot be guaranteed. However, stay tuned on our social media channels for any updates regarding the same.
+                            </p>
+                        </div>
+                    </li> 
                 </ul>
             </div>
 
@@ -458,7 +466,8 @@
                                 No. In the interest of fairness, students should not be working on their projects before the hackathon begins and we do not allow participants to work on pre-existing projects. However, you can familiarize yourself with all the tools and technologies you intend to use beforehand.
                             </p>
                         </div>
-                    </li>                  
+                    </li> 
+                                     
                 </ul>
             </div>
             <!-- </div> -->
