--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     </li>
                     <li>
                         <a data-toggle="collapse" href="#faq13" class="collapsed">Will travel reimbursements be provided?<i class="fa fa-minus-circle"></i></a>
-                        <div id="faq13" class="collapse" data-parent="#faq2-list">
+                        <div id="faq13" class="collapse" data-parent="#faq-list">
                             <p>
                                 Reimbursements cannot be guaranteed. However, stay tuned on our social media channels for any updates regarding the same.
                             </p>
