--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                         <a data-toggle="collapse" href="#faq7" class="collapsed">What are the perks of participating in this hackathon? <i class="fa fa-minus-circle"></i></a>
                         <div id="faq7" class="collapse" data-parent="#faq-list">
                             <p>
-                                The hackathon will instantly increases your knowledge and skill level and will serve as a platform to socialize with the tech community. Cash prizes and other perks are in store for the winners and cool swag for all participants. 
+                                The hackathon will instantly increase your knowledge and skill level and will serve as a platform to socialize with the tech community. Cash prizes and other perks are in store for the winners and cool swag for all participants. 
                             </p>
                         </div>
                     </li>
