--- a/index.html
+++ b/index.html
@@ -579,6 +579,9 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://cloudsploit.com/"><img src="img/sponsors-img/cloudsploit.png" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickermule.com/"><img src="img/sponsors-img/sticker-mule-logo-light.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
