--- a/index.html
+++ b/index.html
@@ -841,14 +841,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         </div>
                     </div>
                     <!-- Footer Menu -->
-                    <!-- <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-6">
                         <div class="footer-menu">
                             <ul class="nav">
-                                <li><a href="#"><i class="zmdi zmdi-circle"></i> Code of Conduct</a></li>
-                                <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li>
+                                <li><a target="_blank" rel="noopener noreferrer" href="https://devfolio.co/code-of-conduct"><i class="zmdi zmdi-circle"></i> Code of Conduct</a></li>
+                                <!-- <li><a href="#"><i class="zmdi zmdi-circle"></i> Privacy Policy</a></li> -->
                             </ul>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
