--- a/index.html
+++ b/index.html
@@ -511,6 +511,9 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width: auto;" src="img/sponsors-img/zulip.png" alt=""></a>
                         </div> 
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.elastic.co/"><img src="img/sponsors-img/logo-elastic.svg" alt=""></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
@@ -529,10 +532,10 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.gatsbyjs.org/"><img src="img/sponsors-img/Gatsby-Logo.svg" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.elastic.co/"><img src="img/sponsors-img/logo-elastic.svg" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img src="img/sponsors-img/balsamiq-logo-screen.png" alt=""></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img src="img/sponsors-img/balsamiq-logo-screen.png" alt=""></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://codingblocks.com/"><img src="img/sponsors-img/Logo_DarkGrey_ NoShadow.png" alt=""></a>
                         </div>
                     </div>
                     <div id="desktop">
