--- a/index.html
+++ b/index.html
@@ -537,6 +537,9 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://codingblocks.com/"><img src="img/sponsors-img/Logo_DarkGrey_ NoShadow.png" alt=""></a>
                         </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.sketch.com/"><img src="img/sponsors-img/sketch-logo-light-transparent@2x.png" alt=""></a>
+                        </div>
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
