--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
+<!--                                         <div class="single-schedule-area d-flex flex-wrap justify-content-between align-items-center wow fadeInUp" data-wow-delay="300ms">
                                             <div class="single-schedule-tumb-info d-flex align-items-center">
                                                 <div class="single-schedule-tumb">
                                                     <img src="img/bg-img/111.png" alt="">
@@ -920,7 +920,7 @@
                                             <div class="schedule-time-place">
                                                 <p><i class="zmdi zmdi-map"></i> Silver Jubilee Auditorium, NITK</p>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
