--- a/index.html
+++ b/index.html
@@ -557,10 +557,26 @@
             </div>
 
             <div class="row">
+
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 450px;" src="img/speakers-img/adobe.jpg" alt="">
+                            <img style="height: 400px;" src="img/speakers-img/wells-fargo.png" alt="">
+                        </div>
+                        <div class="social-info">
+                            <a href="https://www.linkedin.com/in/bharat-raizada-4a09062"><i class="zmdi zmdi-linkedin"></i></a>
+                        </div>
+                        <div class="speaker-info">
+                            <h5>Bharat Raizada</h5>
+                            <p>SVP, Tech Division Exec at Wells Fargo</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <div class="speaker-single-thumb">
+                            <img style="height: 400px;" src="img/speakers-img/adobe.jpg" alt="">
                         </div>
                         <div class="social-info">
                             <a href="https://in.linkedin.com/in/sharad-srivastava-93463b12"><i class="zmdi zmdi-linkedin"></i></a>
@@ -575,7 +591,23 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 450px;" src="img/speakers-img/elastic.png" alt="">
+                            <img style="height: 400px;" src="img/speakers-img/fold.jpg" alt="">
+                        </div>
+                        <div class="social-info">
+                            <a href="https://www.linkedin.com/in/shaktigoap"><i class="zmdi zmdi-linkedin"></i></a>
+                            <a href="https://twitter.com/shaktigoap"><i class="zmdi zmdi-twitter"></i></a>
+                        </div>
+                        <div class="speaker-info">
+                            <h5>Shakti Goap</h5>
+                            <p>Founder at Fold and Devfolio</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
+                        <div class="speaker-single-thumb">
+                            <img style="height: 400px;" src="img/speakers-img/elastic.png" alt="">
                         </div>
                         <div class="social-info">
                             <a href="https://www.linkedin.com/in/aravindputrevu/"><i class="zmdi zmdi-linkedin"></i></a>
@@ -593,7 +625,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-speaker-area bg-gradient-overlay-2 wow fadeInUp" data-wow-delay="300ms">
                         <div class="speaker-single-thumb">
-                            <img style="height: 450px;" src="img/speakers-img/SaurabhGupta.jpg" alt="">
+                            <img style="height: 400px;" src="img/speakers-img/SaurabhGupta.jpg" alt="">
                         </div>
                         <div class="social-info">
                             <a href="https://in.linkedin.com/in/saurabh-gupta-a3262319"><i class="zmdi zmdi-linkedin"></i></a>
@@ -982,7 +1014,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="/img/sponsors-img/codechef.png" alt="Codechef"></a>
                         </div>
                         <div id="zulip" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width:55%" src="/img/sponsors-img/zubi-logo_black.png" alt="Zulip"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width:auto;" src="/img/sponsors-img/zulip.png" alt="Zulip"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="/img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt="Creative Tim"></a>
@@ -1024,7 +1056,7 @@
                             <a target="_blank" rel="noopener noreferrer" href=""><img style="padding-bottom: 10%;width:auto" src="/img/sponsors-img/av8.png" alt="AV8 Juice"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://zubi.io/"><img style="width:30%;margin-left: 25%;" src="/img/sponsors-img/zubi.jpeg" alt="Zubi.io"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="https://zubi.io/"><img style="width:30%;margin-left: 25%;" src="/img/sponsors-img/zubi-logo_black.png" alt="Zubi.io"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://rosenfeldmedia.com/"><img src="/img/sponsors-img/rosenfeld.png" alt="Zubi.io"></a>
@@ -1569,8 +1601,8 @@
             var dev_sponsor = document.getElementById('dev')
             img_width(dev_sponsor, "auto")
 
-            var zulip_sponsor = document.getElementById('zulip')
-            img_width(zulip_sponsor, "auto")
+            // var zulip_sponsor = document.getElementById('zulip')
+            // img_width(zulip_sponsor, "auto")
 
             var jet_sponsor = document.getElementById('jet-brains')
             img_width(jet_sponsor, "auto")
