--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
-                        <h4 style="color:navy">Chief Guest</h4>
+                        <h4 style="color:navy">Chief Guests</h4>
                     </div>
                 </div>
             </div>
