--- a/index.html
+++ b/index.html
@@ -1054,11 +1054,20 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.unnathi.careers/"><img style="padding-bottom: 10%;" src="/img/sponsors-img/unnathiIBM.png" alt="Unnathi Career Academy Pvt. Ltd."></a>
                         </div>
+                        <div id="jet-brains" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.jetbrains.com/"><img src="/img/sponsors-img/jetbrains-variant-4.png" alt="JetBrains"></a>
+                        </div>
+                        <div id="zebronics" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://zebronics.com/"><img src="/img/sponsors-img/zebronics.jpg" alt="Zebronics"></a>
+                        </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.codechef.com/"><img src="/img/sponsors-img/codechef.png" alt="Codechef"></a>
                         </div>
                         <div id="zulip" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://zulipchat.com/"><img style="width:auto;" src="/img/sponsors-img/zulip.png" alt="Zulip"></a>
+                        </div>
+                        <div id="dev" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://dev.to/"><img src="/img/sponsors-img/dev.png" alt="DEV"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.creative-tim.com/"><img src="/img/sponsors-img/tim-horizontal-logo-transparent-bg.png" alt="Creative Tim"></a>
@@ -1066,8 +1075,11 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://cloudsploit.com/"><img src="/img/sponsors-img/cloudsploit.png" alt="CloudSploit"></a>
                         </div>
-                        <div id="jet-brains" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.jetbrains.com/"><img src="/img/sponsors-img/jetbrains-variant-4.png" alt="JetBrains"></a>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://www.wolfram.com/language/"><img src="/img/sponsors-img/wolfram.png" alt="Wolfram Language"></a>
+                        </div>
+                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://codingblocks.com/"><img src="/img/sponsors-img/Logo_DarkGrey_ NoShadow.png" alt="Coding Blocks"></a>
                         </div>
                         <div id="monster" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.monsterenergy.com/"><img src="/img/sponsors-img/monster.png" alt="Monster"></a>
@@ -1079,13 +1091,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.bugsee.com/"><img src="/img/sponsors-img/bugsee.png" alt="Bugsee"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://www.wolfram.com/language/"><img src="/img/sponsors-img/wolfram.png" alt="Wolfram Language"></a>
-                        </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://balsamiq.com/"><img src="/img/sponsors-img/balsamiq-logo-screen.png" alt="Balsamiq"></a>
-                        </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://codingblocks.com/"><img src="/img/sponsors-img/Logo_DarkGrey_ NoShadow.png" alt="Coding Blocks"></a>
                         </div>
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.sketch.com/"><img src="/img/sponsors-img/sketch-logo-light-transparent@2x.png" alt="Sketch"></a>
@@ -1105,15 +1111,15 @@
                         <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://rosenfeldmedia.com/"><img src="/img/sponsors-img/rosenfeld.png" alt="Zubi.io"></a>
                         </div>
-                        <div id="dev" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://dev.to/"><img src="/img/sponsors-img/dev.png" alt="DEV"></a>
-                        </div>
                         <div id="sticker-you" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickeryou.com/"><img src="/img/sponsors-img/stickeryou.png" alt="StickerYou"></a>
                         </div>
-                        <div class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="https://zebronics.com/"><img src="/img/sponsors-img/zebronics.jpg" alt="Zebronics"></a>
+                        <div id="memsis" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="http://memsisrental.com/"><img src="/img/sponsors-img/memsis.png" alt="Memsis"></a>
                         </div>
+                        <!-- <div id="bounce" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
+                            <a target="_blank" rel="noopener noreferrer" href="https://metrobikes.in/"><img src="/img/sponsors-img/bounce.png" alt="Bounce"></a>
+                        </div> -->
                     </div>
                     <div id="desktop">
                         <p style="display:flex;justify-content: center;">Interested in sponsoring HackVerse? Shoot us an email at <a style="color:#9293bc; font-weight: normal; text-indent: 0.2em;" href="mailto:hackverse@nitk.edu.in" target="_blank">hackverse@nitk.edu.in</a></p>
@@ -1634,7 +1640,7 @@
             }
         }
 
-        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Tablet|Opera Mini/i.test(navigator.userAgent)) {
 
             var wf_sponsor = document.getElementById('wells-fargo')
             img_width(wf_sponsor, "auto")
@@ -1653,6 +1659,15 @@
 
             var sticker_sponsor = document.getElementById('sticker-you')
             img_width(sticker_sponsor, "auto")
+
+            var memsis_sponsor = document.getElementById('memsis')
+            img_width(memsis_sponsor, "auto")
+
+            // var bounce_sponsor = document.getElementById('bounce')
+            // img_width(bounce_sponsor, "auto")
+
+            var zebronics_sponsor = document.getElementById('zebronics')
+            img_width(zebronics_sponsor, "auto")
 
             if (mobile != null) {
                 mobile.style.display = "block";
