--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,7 @@
                             <a target="_blank" rel="noopener noreferrer" href="https://www.stickeryou.com/"><img src="/img/sponsors-img/stickeryou.png" alt="StickerYou"></a>
                         </div>
                         <div id="memsis" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
-                            <a target="_blank" rel="noopener noreferrer" href="http://memsisrental.com/"><img src="/img/sponsors-img/memsis.png" alt="Memsis"></a>
+                            <a target="_blank" rel="noopener noreferrer" href="http://memsisrental.com/"><img src="/img/sponsors-img/memsis.jpeg" alt="Memsis"></a>
                         </div>
                         <!-- <div id="bounce" class="single-sponsor wow fadeInUp" data-wow-delay="300ms">
                             <a target="_blank" rel="noopener noreferrer" href="https://metrobikes.in/"><img src="/img/sponsors-img/bounce.png" alt="Bounce"></a>
